// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trainingjournal account mutations matches expected output: createTrainingJournalUser.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation {
  createTrainingjournalUser(username:"test", email:"test@test.no", password:"pass") {
    id
    username
    email
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "createTrainingjournalUser": {
      "id": "Q3JlYXRlVHJhaW5pbmdKb3VybmFsVXNlcjox",
      "username": "test",
      "email": "test@test.no"
    }
  }
}
`;

exports[`trainingjournal account mutations matches expected output: trainingJouranLoginFail.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation fail {
  trainingJournalLogin(username: "tito", password: "fail") {
    success
    token
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "trainingJournalLogin": {
      "success": false,
      "token": null
    }
  }
}
`;

exports[`trainingjournal account mutations matches expected output: trainingJournalLogin.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation success {
  trainingJournalLogin(username: "tito", password: "123456") {
    success
    token
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "trainingJournalLogin": {
      "success": true,
      "token": "signedToken"
    }
  }
}
`;
